[gd_scene load_steps=11 format=2]

[ext_resource path="res://Skripts/Enemy/EnemyBunny.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/enemy.png" type="Texture" id=2]
[ext_resource path="res://Animation/Enemy/BunnyStunned/BunnyStunned1.png" type="Texture" id=3]
[ext_resource path="res://Animation/Enemy/BunnyStunned/BunnyStunned2.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.7624, 22.3338 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Stunned",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.6534, 23.9813 )

[sub_resource type="Animation" id=6]
resource_name = "EnemyEinsaugen"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Delete"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "EnemyStartHitBox"
tracks/0/type = "value"
tracks/0/path = NodePath("HitDetection:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "EnemyStunned"
tracks/0/type = "value"
tracks/0/path = NodePath("HitDetection:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="HitDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnemyEinsaugen = SubResource( 6 )
anims/EnemyStartHitBox = SubResource( 4 )
anims/EnemyStunned = SubResource( 5 )

[connection signal="area_entered" from="HitDetection" to="." method="_on_HitDetection_area_entered"]
[connection signal="area_exited" from="HitDetection" to="." method="_on_HitDetection_area_exited"]
[connection signal="body_entered" from="HitDetection" to="." method="_on_HitDetection_body_entered"]
